import "common/expression.proto";
import "lot/expression.proto";

package apsara.odps.lot;

option java_outer_classname = "AggregateProtos";

//Group By会输出所有的group by columns + 所有的Function的alias。有重复报错
message Aggregate
{
    required string Id = 1;
    required string ParentId = 2;

    repeated Reference GroupByColumns = 3;
    repeated group Functions = 4
    {
        required AggregationFunction Function = 1;
        required string Alias = 2;
    };
}
